# termux-rustls-debug

./: .gitignore  build.gradle  gradle.properties
.github/workflows/: debug_build.yml  gradle-wrapper-validation.yml  run_tests.yml
app/: build.gradle  proguard-rules.pro
app/src/main/java/com/termux/app/: TermuxActivity.java  TermuxApplication.java  TermuxInstaller.java
app/src/main/res/values/: strings.xml
app/src/main/rust/rustls_integration/: Cargo.toml  build.rs
app/src/main/rust/rustls_integration/src/: lib.rs
terminal-emulator/: build.gradle
terminal-emulator/src/main/: AndroidManifest.xml
terminal-view/: build.gradle
termux-shared/: build.gradle
