[package]
name = "rustls_integration"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2.105"
rustls-platform-verifier = "0.5.0"
jni = "0.21.1"
ndk = {version = "0.4.0", features = ["trace"]}

[build-dependencies]
uniffi_build = { version = "0.23.0" }
uniffi_bindgen = "0.23.0"
anyhow = { workspace = true }
glob = "0.3.1"

[lib]
crate_type = ["staticlib", "dylib"]
